#1695 Fix overlapping text/spectrogram on species page

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -311,6 +311,10 @@ h5 {
   row-gap: 4px;
 }
 
+.overflow-x-auto {
+  overflow-x: auto;
+}
+
 // Container
 
 .container {
