--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -609,6 +609,7 @@ textarea.fixed-width {
 }
 
 .width-35 {
+  min-width: 300px;
   width: 35%;
 }
 
